styles/main.css
/*
// Jit, An HTML/CSS template for a web page with sections
// Author: John Lynch
// Date: December 2023
// File: jit/styles/main.css  
*/
* {
    box-sizing: border-box;
    --bg-dark-col: #000;
    --bright-col: #90c4ff;
    --accent-col: #00ffdd;
    --hover-col: #ff4b00;
    --body-bg-col: #010914;
    --bright-text-col: #0084ff;
    --warning-col: #ff4421;
    --rich-dark-col: #701010;
    text-decoration: none;
}

body, html {
    padding: 0.5rem;
    background-color: var(--body-bg-col); 
    font-family: 'Courier New', Courier, monospace;
}

main {            
    display: grid;
    height: 96vh;
    grid-gap: 1vw;
    justify-items: center;
    align-items: stretch;
    border: 1px ridge var(--accent-col);
    border-radius: 5px;
    padding: 0.5vw;
    grid-template-columns: 9fr 1fr;
    grid-template-rows: 1fr 14fr;
    background-color: var(--bg-dark-col);
}

#name {
    font-weight: normal;
    border-bottom: 1px solid var(--accent-col);
    padding-top: 1.5vh;
    color: var(--bright-text-col);
    background-color: var(--body-bg-col);
    font-size: 1.4vw;
}

button {
    width: 4vw;
    height: 2.4vw;
    font-size: 0.8vw;
    border: 2px solid var(--rich-dark-col);
    border-radius: 5px;
    font-weight: 600;
    margin: 0.5vw;
    transition: transform 0.5s;
    box-shadow: 1px 1px #555;
}

button:hover {
    transform: scale(1.05);
}

button:active {
    box-shadow: 3px 3px #666;
    transform: translate(3px, 3px);
  }

button#new-note {
    background-color: #00ffdd;
}

button#save-notes {
    background-color: var(--bright-text-col);
}

button#random {
    background-color: #ff5ecf;
}

button#load {
    background-color: #fa3;
}

button#clear-all {
    background-color: #ff2d5b;
}

button#edit-note {
    background-color: #5df;
}

button#delete-note {
    background-color: var(--warning-col);
}

button#save {
    display: block;
    font-size: 0.7vw;
    margin: 1em;
    background-color: #00ffdd;
    width: 3vw;
    height: 2vw;
    float: right;
}

button#cancel {
    display: block;
    font-size: 0.7vw;
    margin: 1em;
    background-color: #ffd000;
    width: 3vw;
    height: 2vw;
    float: right;
}

.form-wrapper {
    display: block;
    position: absolute;
    left: 40vw;
    top: 20vh;
    width:30vw;
    height: auto;
    border: 3px solid #ffae00;
    border-radius: 5px;
    padding: 1vw;
    background-color: #ffd7b7;
    color: #000;
}

.form-wrapper input[type=text]{
    width: 100%;
    padding: 1vh 1vw;
    margin: 8px 0;
    border: 1px solid #000;
    border-radius: 6px;
    box-sizing: border-box;
    font-size: 1vw;
}

header {
    grid-column: 1/-1;
    grid-row: 1/1;
    align-self: stretch;
    justify-self: stretch;
}

#workspace {
    grid-column: 1/1;
    grid-row: 2/-1;
    min-width:81vw;
    min-height: 40vw;
}

#controls {
    grid-column: 2/2;
    grid-row: 2/-1;
    min-width:9vw;
    min-height: 40vw;
}


#workspace, #controls {
    border: 6px ridge var(--accent-col);;
    border-radius: 6px;
    align-content: center;
    justify-self: center;
    justify-items: stretch;
    padding: 1vw;
}

div#toast {
    position: absolute;
    height: 4vh;
    color: #fda;
    top: 1vw;
    text-align: center;
    font-family: monospace;
    font-size: 0.8vw;
    line-height: 4;
    opacity: 0;
    transition: opacity 2s;
}

